# I_Proyecto_Estructuras

./: ArbolABB.cpp  ArbolABB.h  CMakeLists.txt  CSVRead.h  CSVWrite.h  CSVWriter.h  Cliente.cpp  Cliente.h  Cola.cpp  Cola.h  IReader.h  IWriter.h  Lista.cpp  Lista.h  Menu.cpp  Menu.h  Nodo.h  PriorityQueue.cpp  PriorityQueue.h  TransformadorCSV.h  main.cpp
Archivo csv/: BancoUNO.csv
